--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,10 @@
 .DS_Store
 profile
 bin/install-wp-tests.sh
-
 includes/woocommerce-mailchimp.sublime-workspace
-
 .travis.yml
-
 phpcs.ruleset.xml
-
 phpunit.xml.dist
-
 tests/bootstrap.php
-
 tests/test-sample.php
+release.sh
