--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: php
 
 sudo: false
+
 dist: trusty
 
 php:
@@ -10,37 +11,44 @@ php:
 - 7.0
 - 7.1
 - 7.2
+- 7.3
+
+env:
+  - WP_VERSION=latest WC_BRANCH=master WP_MULTISITE=0
 
 notifications:
   email:
     on_success: never
     on_failure: change
 
-branches:
-  only:
-    - master
-
 cache:
   directories:
     - $HOME/.composer/cache
 
-matrix:
-  include:
-    - php: 7.1
-      env: WP_VERSION=latest
-    - php: 7.0
-      env: WP_VERSION=latest
-    - php: 5.6
-      env: WP_VERSION=3.5.1
-    - php: 5.6
-      env: WP_VERSION=latest
-    - php: 5.6
-      env: WP_VERSION=trunk
-    - php: 5.6
-      env: WP_TRAVISCI=phpcs
-    - php: 5.4
-      env: WP_VERSION=latest
-      dist: precise
+# matrix:
+#   include:
+#     - name: "WooCommerce unit tests using WordPress nightly"
+#       php: 7.3
+#       env: WP_VERSION=nightly WP_MULTISITE=0
+#     - php: 7.1
+#       env: WP_VERSION=latest
+#     - php: 7.0
+#       env: WP_VERSION=latest
+#     - php: 5.6
+#       env: WP_VERSION=latest
+#     - php: 5.6
+#       env: WP_VERSION=latest
+#     - php: 5.6
+#       env: WP_VERSION=latest
+#     - php: 5.6
+#       env: WP_TRAVISCI=phpcs
+#     - php: 5.4
+#       env: WP_VERSION=latest
+#       dist: precise
+
+branches:
+  only:
+    - master
 
 before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
@@ -52,7 +60,7 @@ before_script:
     fi
   - |
     if [[ ! -z "$WP_VERSION" ]] ; then
-      bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+      bash tests/bin/install.sh woocommerce_mailchimp_test root '' localhost $WP_VERSION
       composer global require "phpunit/phpunit=4.8.*|5.7.*"
     fi
   - |
@@ -60,6 +68,8 @@ before_script:
       composer global require wp-coding-standards/wpcs
       phpcs --config-set installed_paths $HOME/.composer/vendor/wp-coding-standards/wpcs
     fi
+
+  - bash tests/bin/travis.sh before
 
 script:
   - |
