--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,21 @@
 {
     "name": "saintsystems/woocommerce-mailchimp",
     "description": "WP WooCommerce Mailchimp",
-    "type": "project",
+    "type": "wordpress-plugin",
     "license": "GPL2+",
+    "prefer-stable": true,
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Saint Systems",
             "email": "contact@saintystems.com"
         }
     ],
-    "minimum-stability": "dev",
     "require": {
         "php": ">=5.6|>=7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "7.5.20"
+        "phpunit/phpunit": "^7.5"
     },
     "scripts": {
         "test": "vendor/bin/phpunit"
