--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": ">=5.6|>=7.0|>=8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0 || ^8.0 || ^9.0"
+        "phpunit/phpunit": "^5.0 || ^7.0 || ^8.0 || ^9.0"
     },
     "scripts": {
         "test": "vendor/bin/phpunit"
